# SOTest8

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/biao/sotest8/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/biao/sotest8/: MainActivity.java
app/src/main/java/raio/: Raio.java
app/src/main/jni/: raio.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/biao/sotest8/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
